@startuml
title pg:: creatures & feats (creatures-feats.md — port of Unity Creatures/ + Feats/)
hide empty members

class CreatureSpecies <<definition>> {
  +attributes : Attributes
  +defaultAbilities : Ability*[]
  +featBoard : const FeatBoard*
  +forms : map<id, CreatureForm>
  +defaultFormId
  +tamingProfile
}
class CreatureForm {
  +displayName / tier
  +modelId / animationSetId / avatar
}
class CreatureUnit {
  +species
  +currentFormId <<derived (D35)>>
  +attributes : Attributes  <<derived>>
  +abilities <<derived>>
  +permanentPassives <<derived>>
  +featBoardProgress  <<the ONLY persisted state>>
}
class Attributes {
  +health ap mp attack armor armorPen
  +magic resistance resistPen bonusRange
  +stamina staminaRate bonusHealing
  +lifeSteal omnivampirism timeEffectRes
}
CreatureSpecies *-- CreatureForm
CreatureSpecies *-- Attributes
CreatureUnit --> CreatureSpecies
CreatureUnit *-- Attributes

class FeatBoard <<definition>> {
  +rootNodeUuid
  +nodes
  +neighbours(node)
}
class FeatNode {
  +uuid : spk::UUID (D34)
  +kind / position / displayName
  +neighbourUuids / repeatLimit
  +requirements : {uuid, FeatRequirement}[]
  +rewards : FeatReward[]
}
abstract class BattleCondition <<shared core (D33)>> {
  +scope : Ability|Turn|Fight|Game
  +requiredRepeatCount
  +evaluateEvents(events, adv) : Advancement
  #evaluateEventProgress(event)* : 0..100
}
class FeatRequirement <<feat factory>>
BattleCondition <|-- FeatRequirement
abstract class FeatReward <<polymorphic>> {
  +apply(CreatureUnit&)
}
class "BonusStats / Ability / RemoveAbility\nPassive / ChangeForm" as Rewards
FeatReward <|-- Rewards
FeatBoard *-- FeatNode
FeatNode o-- FeatRequirement
FeatNode o-- FeatReward
CreatureSpecies --> FeatBoard

class FeatBoardProgress {
  +nodeProgress[]  .. uuid-keyed (D34) ..
  +toJson/fromJson .. unknown uuids dropped ..
}
class FeatNodeProgress {
  +nodeUuid / completionCount
  +requirementProgress[]
  +isCompleted / isExhausted(node)
}
class FeatRequirementProgress {
  +requirementUuid
  +advancement {progress%, repeats}
  +persistsAcrossFights = (scope==Game)
}
FeatBoardProgress *-- FeatNodeProgress
FeatNodeProgress *-- FeatRequirementProgress
CreatureUnit *-- FeatBoardProgress

class FeatBoardService <<service>> {
  +applyProgress(unit)  .. recompute pipeline ..
  +registerFightEvents(unit, events)
  +isNodeReachable / completeNodeDirect
  .. listens battleResolved: evaluate log for
     BOTH outcomes (D25) ..
}
FeatBoardService ..> FeatBoardProgress
FeatBoardService ..> "BattleLog"
@enduml
